# mnist-snn

./: .gitignore  Cargo.toml  ENERGY_CALCULATION.md  LICENSE  README.md
mnist_solver/: Cargo.toml
mnist_solver/src/: main.rs
snn/: Cargo.toml
snn/src/: conv_snn.rs  lib.rs
